Fix styling for our contact info conatainer to align with the rest of the style

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -489,7 +489,7 @@ iframe {
 
     .our-info-container {
         margin-top: 800px;
-        margin-right: 40%;
+        margin-right: 30%;
         margin-bottom: 30px;
     }
 }
@@ -531,7 +531,15 @@ iframe {
         margin-left: 10%;
         margin-bottom: 20px;
     }
+    
+    .contact-form {
+        height: fit-content;
+    }
 
+    .our-info-container {
+        margin-right: 10%;
+    }
+    
     .bg-img {
         padding-top: 10px;
     }
@@ -540,7 +548,9 @@ iframe {
 @media screen and (max-width: 450px) {
     
     #menu {
+        width: 100%;
         font-size: 90%;
+        margin-bottom: 20px;
     }
 
     .contact-form {
@@ -549,7 +559,7 @@ iframe {
 
     .contact-img {
         height: 260px;
-        margin-top: 100px;
+        margin-top: 130px;
     }
     
     #our-info {
@@ -558,7 +568,7 @@ iframe {
 
     .our-info-container {
         margin-top: 20px;
-        margin-left: 20px;
+        margin-left: 75px;
         height: 450px;
     }
 
@@ -600,9 +610,9 @@ iframe {
         margin: -10px;
         font-size: 110%;
     }
-
+    
     .bg-img {
-        padding-top: 30px;
+        margin-top: 40px;
     }
 }
 
